<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rl_detail"
    android:background="@drawable/pergamino">

    <com.github.siyamed.shapeimageview.RoundedImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/char_thumb_big"
        android:adjustViewBounds="true"
        app:siRadius="100dp"
        android:layout_marginTop="16dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:progressDrawable="@drawable/circular_progress_bar"
        android:id="@+id/progressBar2"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="308dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/char_thumb_big">


        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/char_thumb_big"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/title_name"
                android:id="@+id/title_name"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="0dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="0dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/title_age"
                android:id="@+id/title_age"
                android:layout_marginLeft="0dp"
                android:layout_below="@+id/detail_name"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/title_weight"
                android:id="@+id/title_weight"
                android:layout_marginLeft="0dp"
                android:layout_below="@+id/title_age"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/title_height"
                android:id="@+id/title_height"
                android:layout_marginLeft="0dp"
                android:layout_below="@+id/title_weight"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/title_hair_color"
                android:id="@+id/title_hair_color"
                android:layout_marginLeft="0dp"
                android:layout_below="@+id/title_height"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/title_professions"
                android:id="@+id/title_professions"
                android:layout_marginLeft="0dp"
                android:layout_below="@+id/title_hair_color"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/title_friends"
                android:id="@+id/title_friends"
                android:layout_marginLeft="0dp"
                android:layout_below="@+id/detail_professions"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Medium Text"
                android:id="@+id/detail_name"
                android:layout_marginStart="39dp"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/title_professions" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Medium Text"
                android:id="@+id/detail_age"
                android:layout_alignTop="@+id/title_age"
                android:layout_alignStart="@+id/detail_name" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Medium Text"
                android:id="@+id/detail_weight"
                android:layout_alignTop="@+id/title_weight"
                android:layout_alignStart="@+id/detail_age" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Medium Text"
                android:id="@+id/detail_height"
                android:layout_alignTop="@+id/title_height"
                android:layout_alignStart="@+id/detail_weight" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Medium Text"
                android:id="@+id/detail_hair_color"
                android:layout_alignTop="@+id/title_hair_color"
                android:layout_alignStart="@+id/detail_height" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Medium Text"
                android:id="@+id/detail_professions"
                android:ellipsize="end"
                android:layout_alignTop="@+id/title_professions"
                android:layout_alignStart="@+id/detail_hair_color" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Medium Text"
                android:id="@+id/detail_friends"
                android:ellipsize="end"
                android:layout_below="@+id/detail_professions"
                android:layout_alignStart="@+id/detail_professions" />
        </RelativeLayout>

    </ScrollView>

</RelativeLayout>